# sanskrit-translator-dspy

./: .example.env  .gitignore  README.md  compile.py  evaluate.py  main.py  pyproject.toml  setup.py  translator-mipro.json  translator.json
examples/: translations.json
modules/: TranslationModule.py
signatures/: CheckTranslationSignature.py
